# Multilingual_prod_Assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README-SETUP.md  README.md  backend.yaml  deploy-minikube.ps1  deploy_local.ps1  docker-compose.yml  frontend.yaml  logs.txt  speckit.constitution.md  start_minikube.ps1
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README_HF.md  check_models.py  debug_chat_full.py  debug_chat_loop.py  list_models.py  list_models_file.py  list_openrouter_models.py  nuke_db.bat  pyproject.toml  requirements.txt  test_auth_flow.py  test_email.py  test_flash_15.py  test_gemini.py  test_model_prefix.py  test_models_loop.py  test_openrouter.py
backend/app/: __init__.py  auth.py  config.py  dapr_client.py  database.py  email_utils.py  main.py  models.py  scheduler_service.py  schemas.py  skills.py
backend/app/ai/: engine.py  mcp_server.py
backend/app/routes/: __init__.py  auth.py  chat.py  health.py  tasks.py
backend/skills/: README.md  __init__.py  deployment_blueprint.py  lang_detector.py  task_priority.py
backend/tests/: __init__.py
console/: CLAUDE.md  README.md  pyproject.toml
console/src/: __init__.py  main.py  models.py  task_manager.py
console/tests/: test_task_manager.py
dapr/components/: kafka-pubsub.yaml
dapr/components_docker/: pubsub.yaml
frontend/: .dockerignore  CLAUDE.md  Dockerfile  build_log.txt  next.config.ts  package-lock.json  package.json  vercel.json
specs/: overview.md
specs/api/: mcp-tools.md  rest-endpoints.md
specs/database/: schema.md
specs/features/: advanced.md  (+2 more)
(+38 files in other folders)
